# supragnosis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: frontend-lint.yml  pages.yml  release.yml
app/: Cargo.toml  tauri.conf.json
app/assets/: shell-init.js
app/capabilities/: default.json
app/icons/: generate.py  icon.icns
app/src/: main.rs
crates/supragnosis-cli/: Cargo.toml
crates/supragnosis-cli/src/: main.rs
crates/supragnosis-cli/tests/: semantic_e2e.rs
crates/supragnosis-core/: Cargo.toml
crates/supragnosis-core/src/: lib.rs
crates/supragnosis-embed/: Cargo.toml
crates/supragnosis-embed/src/: fastembed_provider.rs  lib.rs
crates/supragnosis-engine/: Cargo.toml
crates/supragnosis-engine/src/: lib.rs
crates/supragnosis-engine/tests/: principle_scenarios.rs  recall_eval.rs
crates/supragnosis-mcp/: Cargo.toml
crates/supragnosis-mcp/src/: lib.rs
crates/supragnosis-mcp/tests/: llm_eval.rs  mcp_surface.rs  ollama_eval.rs
crates/supragnosis-store/: Cargo.toml
crates/supragnosis-store/src/: cozo_store.rs  lib.rs
crates/supragnosis-sync/: Cargo.toml
crates/supragnosis-sync/src/: http.rs  lib.rs
crates/supragnosis-viz/: Cargo.toml  build.rs
crates/supragnosis-viz/assets/: README.md  eslint.config.js  package-lock.json  package.json  viewer.css  viewer.html  viewer.js
crates/supragnosis-viz/src/: lib.rs
crates/supragnosis-viz/tests/: http.rs
deploy/: README.md  install.sh
deploy/homebrew/: README.md  update-tap.sh
deploy/homebrew/Casks/: supragnosis-app.rb  supragnosis.rb
deploy/homebrew/Formula/: supragnosis-server.rb  supragnosis.rb
deploy/launchd/: com.ashon.supragnosis.plist  com.supragnosis.daemon.plist
docs/: architecture.md  federation.md  principles.md  proposal-workflow.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
e2e/: Cargo.toml
e2e/src/: bridge.rs  embedders.rs  lib.rs  report.rs
e2e/tests/: delegation_eval.rs  llm_eval.rs  ollama_eval.rs  ontology_build_eval.rs  physics_coding_eval.rs
scripts/: install.sh
site/: index.html  style.css
