[workspace]
resolver = "2"
# e2e 는 배포물(crates/*)과 분리된 실모델 종단 측정 스위트다.
members = ["crates/*", "e2e"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ashon/supragnosis"

# 워크스페이스 공통 lint. 각 crate 는 `[lints] workspace = true` 로 상속한다.
# clippy 경고를 deny 로 고정해 정리 상태의 regression 을 막는다.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
# 외부
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
cozo = { version = "0.7", features = ["storage-rocksdb"] }
# standalone 데몬: MCP streamable-http 서비스를 마운트할 HTTP 서버(cli 전용).
axum = "0.8"

# 내부 (crate 간)
supragnosis-core = { path = "crates/supragnosis-core" }
supragnosis-store = { path = "crates/supragnosis-store" }
supragnosis-engine = { path = "crates/supragnosis-engine" }
supragnosis-embed = { path = "crates/supragnosis-embed" }
supragnosis-mcp = { path = "crates/supragnosis-mcp" }
supragnosis-viz = { path = "crates/supragnosis-viz" }
