[workspace]
resolver = "2"
# e2e is a real-model end-to-end measurement suite, separate from the deliverables (crates/*).
members = ["crates/*", "e2e"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ashon/supragnosis"

# Workspace-wide lints. Each crate inherits them via `[lints] workspace = true`.
# Pin clippy warnings to deny to prevent regression of the cleaned-up state.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
cozo = { version = "0.7", features = ["storage-rocksdb"] }
# standalone daemon: HTTP server to mount the MCP streamable-http service (cli only).
axum = "0.8"

# Internal (cross-crate)
supragnosis-core = { path = "crates/supragnosis-core" }
supragnosis-store = { path = "crates/supragnosis-store" }
supragnosis-engine = { path = "crates/supragnosis-engine" }
supragnosis-embed = { path = "crates/supragnosis-embed" }
supragnosis-mcp = { path = "crates/supragnosis-mcp" }
supragnosis-viz = { path = "crates/supragnosis-viz" }
