[package]
name = "supragnosis-e2e"
description = "실모델 종단(e2e) 측정 스위트: 모델 행동의 채점표를 낸다 - 회귀 가드가 아니다."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# MCP 클라이언트로 살아있는 서버 표면을 구동한다(in-process duplex).
rmcp = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["io-util"] }
serde_json.workspace = true
# Ollama(OpenAI 호환) / Anthropic API 호출.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# 평가 대상 스택 조립.
supragnosis-engine.workspace = true
supragnosis-mcp.workspace = true
supragnosis-store.workspace = true
supragnosis-embed.workspace = true

[dev-dependencies]
# physics_coding_eval 에서 생성 코드의 설계 지문(수치/공식 패턴)을 검사한다.
regex-lite = "0.1"
