[package]
name = "supragnosis-e2e"
description = "Real-model end-to-end (e2e) measurement suite: produces a scorecard of model behavior - not a regression guard."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Drives the live server surface with an MCP client (in-process duplex).
rmcp = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["io-util"] }
serde_json.workspace = true
# Ollama(OpenAI-compatible) / Anthropic API calls.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Assembles the stack under evaluation.
supragnosis-engine.workspace = true
supragnosis-mcp.workspace = true
supragnosis-core.workspace = true
supragnosis-store.workspace = true
supragnosis-embed.workspace = true
# Renders markdown reports to HTML in the index dashboard (with table extension).
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[dev-dependencies]
# In physics_coding_eval, inspects the design fingerprint (numeric/formula patterns) of the generated code.
regex-lite = "0.1"

[features]
# For A/B of the real embedder (fastembed/ONNX) - needed by delegation_eval's EVAL_EMBEDDERS=...,fastembed.
# It is a heavy dependency (ort), so it is isolated as opt-in (same intent as supragnosis-embed's fastembed feature).
real-embed = ["supragnosis-embed/fastembed"]
