[package]
name = "supragnosis-cli"
description = "supragnosis executable binary."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "supragnosis"
path = "src/main.rs"

[features]
default = []
# Enables fastembed(ONNX local embedding). It is a heavy dependency, so opt-in - when off, it degrades to keyword search.
# In a build with it on, the runtime default embedder becomes fastembed (can be overridden via SUPRAGNOSIS_EMBED).
fastembed = ["supragnosis-embed/fastembed"]

[dependencies]
supragnosis-core.workspace = true
supragnosis-engine.workspace = true
supragnosis-store.workspace = true
supragnosis-embed.workspace = true
supragnosis-mcp.workspace = true
supragnosis-viz.workspace = true
# transport-streamable-http-server: MCP HTTP service of the standalone daemon (SUPRAGNOSIS_HTTP_ADDR).
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
# net: viewer/daemon TcpListener bind. Not in the workspace-wide set, so added locally.
tokio = { workspace = true, features = ["net"] }
# HTTP server that mounts the MCP streamable-http service (daemon mode).
axum.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Subcommand/flag CLI.
clap = { version = "4", features = ["derive"] }
# Federation wiring (M4 Phase 4): sync server/client + supragnosis.toml + node keypair generation.
supragnosis-sync = { workspace = true, features = ["http"] }
serde.workspace = true
blake3.workspace = true
toml = "0.8"
getrandom = "0.2"

# Background daemon (start): fork/setsid/pidfile/log redirect. Since unsafe_code=forbid, we do not
# implement it directly but delegate to a crate (internal unsafe is the dependency crate's concern). unix only.
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
