[package]
name = "supragnosis-core"
description = "supragnosis domain model + ports (traits). No IO dependencies."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
