[package]
name = "supragnosis-embed"
description = "supragnosis embedding adapters. Deterministic hashing (zero deps) + fastembed(ONNX, feature)."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
# fastembed(ONNX local model) is a heavy dependency, so it is isolated as opt-in (Principle 19: degrade).
fastembed = ["dep:fastembed"]

[dependencies]
supragnosis-core.workspace = true
fastembed = { version = "4", optional = true }
