[package]
name = "supragnosis-engine"
description = "supragnosis 서비스 계층: observe/resolve/query/traverse."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
supragnosis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
supragnosis-store.workspace = true
supragnosis-embed.workspace = true
