[package]
name = "supragnosis-engine"
description = "supragnosis service layer: observe/resolve/query/traverse."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
supragnosis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
supragnosis-store.workspace = true
supragnosis-embed.workspace = true
# Cross-node convergence tests (M4 Phase 2): engine re-projection over sync-replicated logs.
supragnosis-sync.workspace = true
