[package]
name = "supragnosis-mcp"
description = "supragnosis MCP server: rmcp tools/resources/prompts."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
supragnosis-engine.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
# Tool handlers offload blocking store calls via spawn_blocking (HTTP concurrency).
# rt(-multi-thread) is a workspace-wide feature, so spawn_blocking is available.
tokio.workspace = true

[dev-dependencies]
# For integration tests that drive the MCP tool surface over the real protocol.
# The client feature spins up an in-process client, and io-util builds a duplex pipe.
rmcp = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["io-util"] }
# Adapters to actually assemble the Engine (non-persistent InMemory + deterministic embedder).
# Real-model end-to-end measurement (non-deterministic eval) lives in e2e/, not this crate.
supragnosis-store.workspace = true
supragnosis-embed.workspace = true
