[package]
name = "supragnosis-store"
description = "supragnosis 저장소 어댑터: in-memory + Cozo(RocksDB)."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
supragnosis-core.workspace = true
cozo.workspace = true
serde_json.workspace = true
