[package]
name = "supragnosis-store"
description = "supragnosis store adapters: in-memory + Cozo(RocksDB)."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
supragnosis-core.workspace = true
cozo.workspace = true
serde_json.workspace = true
# Record enumeration degrade (excluding corrupt rows) instead of silencing it (Principle 19).
tracing.workspace = true
