[package]
name = "supragnosis-sync"
description = "supragnosis federation sync core: version-vector delta replication, stamping, verify/apply. Transport-agnostic (M4 Phase 2)."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# M4 Phase 3 transport: axum sync API (advertise/pull/push) + rustls TLS + bearer/allowlist wire auth
# + reqwest client. Off by default so the sync core stays IO-free (P20).
http = ["dep:axum", "dep:axum-server", "dep:reqwest", "dep:tokio", "dep:blake3", "dep:tracing"]

[dependencies]
supragnosis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum = { workspace = true, optional = true }
axum-server = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
supragnosis-store.workspace = true
tokio.workspace = true
