[package]
name = "supragnosis-viz"
description = "supragnosis ontology live visualization - localhost HTTP viewer (read-only adapter)."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Exposes the engine.graph(ws) projection by serializing it as-is (Principle 20: viz depends only on engine).
supragnosis-engine.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
# TcpListener + AsyncRead/Write + broadcast(sync). Not in the workspace-wide set, so enabled locally
# (cargo features are a union, so it is harmless to other crate builds). sync = MCP event broadcast.
tokio = { workspace = true, features = ["net", "io-util", "sync"] }

[dev-dependencies]
# Verifies the HTTP surface in-process with a deterministic Engine assembly (InMemory + lexical hashing).
supragnosis-store.workspace = true
supragnosis-embed.workspace = true
# Integration test that fires real GETs at a local port. localhost http, so no TLS needed.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt-multi-thread", "macros"] }

[build-dependencies]
lightningcss = "1.0.0-alpha.72"
minify-html = "0.18.1"
oxc = { version = "0.141.0", features = ["codegen"] }
