[package]
name = "supragnosis-viz"
description = "supragnosis ontology live visualization - local unix-socket HTTP viewer."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Exposes the engine.graph(ws) projection by serializing it as-is (Principle 20: viz depends only on engine).
supragnosis-engine.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
# UnixListener + AsyncRead/Write + broadcast(sync). Not in the workspace-wide set, so enabled locally
# (cargo features are a union, so it is harmless to other crate builds). sync = MCP event broadcast.
tokio = { workspace = true, features = ["net", "io-util", "sync"] }

[dev-dependencies]
# Verifies the HTTP-over-UDS surface in-process with a deterministic Engine assembly (InMemory +
# lexical hashing), speaking raw HTTP/1.1 over UnixStream - no HTTP client dependency needed.
supragnosis-store.workspace = true
supragnosis-embed.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt-multi-thread", "macros"] }

[build-dependencies]
lightningcss = "1.0.0-alpha.72"
minify-html = "0.18.1"
oxc = { version = "0.141.0", features = ["codegen"] }
